--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,13 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
-    "eventemitter3": "^2.0.0",
     "express": "^4.14.0",
-    "flux": "^2.1.1",
     "jquery": "^3.1.0",
     "object-assign": "^4.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-router": "^2.8.0"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.0",
+    "redux": "^3.6.0"
   }
 }
