--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "axios": "^0.14.0",
     "express": "^4.14.0",
     "jquery": "^3.1.0",
     "object-assign": "^4.1.0",
@@ -24,6 +25,8 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   }
 }
