--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.5.0",
+    "babel-core": "^6.16.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.25.0",
+    "postcss-color-function": "^2.0.1",
+    "postcss-import": "^8.1.2",
+    "postcss-initial": "^1.5.2",
+    "postcss-loader": "^0.13.0",
+    "postcss-math": "0.0.5",
+    "postcss-mixins": "^5.2.0",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^3.0.0",
+    "precss": "^1.4.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
   "dependencies": {
     "axios": "^0.14.0",
+    "babel-polyfill": "^6.16.0",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.1.0",
     "object-assign": "^4.1.0",
     "react": "^15.3.1",
