--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "postcss-color-function": "^2.0.1",
     "postcss-import": "^8.1.2",
     "postcss-initial": "^1.5.2",
@@ -27,16 +28,18 @@
     "postcss-simple-vars": "^3.0.0",
     "precss": "^1.4.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.3"
   },
   "dependencies": {
     "axios": "^0.14.0",
     "babel-polyfill": "^6.16.0",
+    "d3": "^4.3.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^3.1.0",
     "object-assign": "^4.1.0",
     "react": "^15.3.1",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
