--- a/client/package.json
+++ b/client/package.json
@@ -18,15 +18,13 @@
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "postcss-color-function": "^2.0.1",
+    "postcss": "^5.2.5",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^2.8.0",
     "postcss-import": "^8.1.2",
-    "postcss-initial": "^1.5.2",
     "postcss-loader": "^0.13.0",
-    "postcss-math": "0.0.5",
-    "postcss-mixins": "^5.2.0",
-    "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^3.0.0",
-    "precss": "^1.4.0",
+    "postcss-reporter": "^1.4.1",
+    "postcss-url": "^5.1.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   },
