--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Grunt Tasks #
-###############
-.sass-cache
-*.css.map
 
 # Compiled source #
 ###################
@@ -50,8 +46,9 @@ bower-components
 
 # Build specific   #
 ####################
-build
-production
+public/*.css
+public/*.js
+public/*.gif
 
 # IIS #
 ####################
@@ -64,4 +61,5 @@ web.config
 
 # Debugging maps #
 ##################
+*.css.map
 *.js.map
