--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,20 @@
 {
   "name": "react-routes",
   "version": "1.0.0",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
   "description": "React Router Spike",
   "main": "index.js",
   "scripts": {
     "watch": "webpack -d --watch",
     "build": "webpack",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "test:unit": "mocha -w tests/unit/helpers/browser.js tests/unit/specs/*.spec.js",
+    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./public"
   },
   "author": "",
   "license": "ISC",
@@ -16,8 +24,13 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.0",
     "css-loader": "^0.25.0",
+    "enzyme": "^2.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jsdom": "^9.8.3",
+    "mocha": "^3.1.2",
     "postcss": "^5.2.5",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.8.0",
@@ -25,6 +38,7 @@
     "postcss-loader": "^0.13.0",
     "postcss-reporter": "^1.4.1",
     "postcss-url": "^5.1.2",
+    "react-addons-test-utils": "^15.3.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   },
