--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,15 @@
     ]
   },
   "description": "React Router Spike",
-  "main": "index.js",
+  "main": "index",
   "scripts": {
-    "watch": "webpack -d --watch",
     "build": "webpack",
+    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./public",
+    "postinstall": "./node_modules/.bin/selenium-standalone install",
     "start": "nodemon server.js",
     "test:unit": "mocha -w tests/unit/helpers/browser.js tests/unit/specs/*.spec.js",
-    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./public"
+    "test:functional": "wdio",
+    "watch": "webpack -d --watch"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +29,7 @@
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.0",
     "css-loader": "^0.25.0",
+    "cucumber": "^1.3.1",
     "enzyme": "^2.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "jsdom": "^9.8.3",
@@ -39,7 +42,14 @@
     "postcss-reporter": "^1.4.1",
     "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.3.2",
+    "selenium-standalone": "^5.8.0",
     "style-loader": "^0.13.1",
+    "wdio-allure-reporter": "^0.1.2",
+    "wdio-cucumber-framework": "^0.2.11",
+    "wdio-phantomjs-service": "^0.2.2",
+    "wdio-selenium-standalone-service": "0.0.7",
+    "wdio-spec-reporter": "0.0.3",
+    "webdriverio": "^4.4.0",
     "webpack": "^1.13.3"
   },
   "dependencies": {
