REACT | spretorius | - Consolidated some steps into actions - Started moving complex shell commands into seperate task files

--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,16 @@
   },
   "description": "React Router Spike",
   "scripts": {
-    "build": "./node_modules/.bin/webpack",
-    "dev:hot": "./node_modules/.bin/webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./public",
-	"document:test:suite:functional:steps": "./node_modules/.bin/jsdoc -c ./configuration/documentation/tests/functional/suite/jsdoc-steps.json",
-	"document:test:suite:functional:support": "./node_modules/.bin/jsdoc -c ./configuration/documentation/tests/functional/suite/jsdoc-support.json",
-	"document:test:results:functional": "./node_modules/.bin/allure generate tests/functional/reports/ -o documentation/tests/functional/results",
-    "postinstall": "./node_modules/.bin/selenium-standalone install",
+    "build": "webpack",
+    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./public",
+    "document:test:suite:functional:steps": "node ./tasks/document-test-function-suite-steps",
+    "document:test:suite:functional:support": "node ./tasks/document-test-function-suite-support",
+    "document:test:results:functional": "allure generate tests/functional/reports/ -o documentation/tests/functional/results",
+    "postinstall": "selenium-standalone install",
     "start": "nodemon server.js",
-    "test:unit": "./node_modules/.bin/mocha tests/unit/helpers/browser.js tests/unit/specs/*.spec.js",
-    "test:functional": "./node_modules/.bin/wdio webdriverio.js",
-    "watch": "./node_modules/.bin/webpack -d --watch"
+    "test:unit": "mocha tests/unit/helpers/browser.js tests/unit/specs/*.spec.js",
+    "test:functional": "wdio webdriverio.js",
+    "watch": "webpack -d --watch"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.0",
+    "colors": "^1.1.2",
     "css-loader": "^0.25.0",
     "cucumber": "^1.3.1",
     "docdash": "^0.4.0",
@@ -47,7 +48,9 @@
     "postcss-reporter": "^1.4.1",
     "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.3.2",
+    "rimraf": "^2.5.4",
     "selenium-standalone": "^5.8.0",
+    "shelljs": "^0.7.5",
     "style-loader": "^0.13.1",
     "wdio-allure-reporter": "^0.1.2",
     "wdio-cucumber-framework": "^0.2.11",
