REACT | spretorius | Moved all tasks into Node drive files

--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,16 @@
   },
   "description": "React Router Spike",
   "scripts": {
-    "build": "webpack",
-    "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./public",
-    "document:test:suite:functional:steps": "node ./tasks/document-test-function-suite-steps",
-    "document:test:suite:functional:support": "node ./tasks/document-test-function-suite-support",
-    "document:test:results:functional": "allure generate tests/functional/reports/ -o documentation/tests/functional/results",
+    "build:application": "node ./tasks/builds/application",
     "postinstall": "selenium-standalone install",
-    "start": "nodemon server.js",
-    "test:unit": "mocha tests/unit/helpers/browser.js tests/unit/specs/*.spec.js",
-    "test:functional": "wdio webdriverio.js",
-    "watch": "webpack -d --watch"
+    "server:development": "node ./tasks/servers/development",
+    "server:test": "node ./tasks/servers/test",
+    "test:unit": "node ./tasks/tests/unit",
+    "test:functional": "node ./tasks/tests/functional",
+    "document:test:functional:suite:steps": "node ./tasks/documentation/test-functional-suite-steps",
+    "document:test:functional:suite:support": "node ./tasks/documentation/test-functional-suite-support",
+    "document:test:functional:results": "node ./tasks/documentation/test-functional-results",
+    "watch": "node ./tasks/utilities/watch"
   },
   "author": "",
   "license": "ISC",
