--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^6.5.0",
     "babel-core": "^6.16.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
@@ -35,17 +36,19 @@
     "cucumber": "^1.3.1",
     "docdash": "^0.4.0",
     "enzyme": "^2.5.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
+    "file-loader": "^0.9.0",
+    "image-webpack-loader": "^3.1.0",
     "jsdoc": "^3.4.2",
     "jsdoc-jsx": "^0.1.0",
     "jsdom": "^9.8.3",
     "mocha": "^3.1.2",
-    "postcss": "^5.2.5",
+    "postcss": "^5.2.10",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.8.0",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.13.0",
-    "postcss-reporter": "^1.4.1",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.0.0",
+    "postcss-reporter": "^3.0.0",
     "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.3.2",
     "rimraf": "^2.5.4",
@@ -58,7 +61,8 @@
     "wdio-selenium-standalone-service": "0.0.7",
     "wdio-spec-reporter": "0.0.3",
     "webdriverio": "^4.4.0",
-    "webpack": "^1.13.3"
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "axios": "^0.14.0",
@@ -72,6 +76,7 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
