--- a/client/package.json
+++ b/client/package.json
@@ -70,6 +70,7 @@
     "d3": "^4.3.0",
     "express": "^4.14.0",
     "jquery": "^3.1.0",
+    "lodash.debounce": "^4.0.8",
     "object-assign": "^4.1.0",
     "react": "^15.3.1",
     "react-addons-css-transition-group": "^15.3.2",
